--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,22 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Devel-Dumpvar
-version:      0.02
-version_from: lib/Devel/Dumpvar.pm
-installdirs:  site
-requires:
-    File::Spec:                    0.82
-    Scalar::Util:                  1.11
-    Test::More:                    0
-
+--- 
+abstract: A pure-OO reimplementation of dumpvar.pl
+author: 
+  - Adam Kennedy <adamk@cpan.org>
+build_requires: 
+  File::Spec: 0.80
+  Test::More: 0.42
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.16
+generated_by: Module::Install version 0.68
+license: perl
+meta-spec: 
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
+name: Devel-Dumpvar
+no_index: 
+  directory: 
+    - inc
+    - t
+requires: 
+  Scalar::Util: 1.17
+  perl: 5.005
+version: 0.04
