--- a/META.yml
+++ b/META.yml
@@ -1,22 +1,29 @@
---- 
-abstract: A pure-OO reimplementation of dumpvar.pl
-author: 
-  - Adam Kennedy <adamk@cpan.org>
-build_requires: 
+---
+abstract: 'A pure-OO reimplementation of dumpvar.pl'
+author:
+  - 'Adam Kennedy <adamk@cpan.org>'
+build_requires:
+  ExtUtils::MakeMaker: 6.42
   File::Spec: 0.80
   Test::More: 0.42
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: Module::Install version 0.68
+generated_by: 'Module::Install version 0.88'
 license: perl
-meta-spec: 
-  url: http://module-build.sourceforge.net/META-spec-v1.3.html
-  version: 1.3
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+module_name: Devel::Dumpvar
 name: Devel-Dumpvar
-no_index: 
-  directory: 
+no_index:
+  directory:
     - inc
     - t
-requires: 
-  Scalar::Util: 1.17
-  perl: 5.005
-version: 0.04
+requires:
+  perl: 5.6.0
+resources:
+  ChangeLog: http://fisheye2.atlassian.com/changelog/cpan/trunk/Devel-Dumpvar
+  license: http://dev.perl.org/licenses/
+  repository: http://svn.ali.as/cpan/trunk/Devel-Dumpvar
+version: 1.05
