--- a/META.yml
+++ b/META.yml
@@ -9,7 +9,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.88'
+generated_by: 'Module::Install version 0.91'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -21,9 +21,10 @@ no_index:
     - inc
     - t
 requires:
+  Scalar::Util: 1.18
   perl: 5.6.0
 resources:
   ChangeLog: http://fisheye2.atlassian.com/changelog/cpan/trunk/Devel-Dumpvar
   license: http://dev.perl.org/licenses/
   repository: http://svn.ali.as/cpan/trunk/Devel-Dumpvar
-version: 1.05
+version: 1.06
